--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -235,13 +235,19 @@ a
     a
       :font-size 11.3px
       :display block
+    .selected
+      :background #3d80df
+      :color white
+  .selected
+    :background #3d80df
+    :color white
   li, h4  
     &:hover
       :background #3d80df
       :color white
       a
         :color white
-        :background-position right bottom !important 
+        :background-position right bottom !important
 
 #albums    
   h4, li
