Added String#snip Snipped track/artist in various places where it could break the layout Added rescue blocks around main command dispatcher; prevents errors that happen if itunes gets closed after the server starts.

--- a/views/_album.haml
+++ b/views/_album.haml
@@ -2,4 +2,4 @@
   %h4= link_to album, :do => :add_album, :album => album
   %ol
     - tracks.each do |track|
-      %li= link_to track.title, :do => :add, :index => track.library_index
+      %li= link_to track.title.snip(60), :do => :add, :index => track.library_index
